--- a/index.html
+++ b/index.html
@@ -1,9 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Filmes Online | Onlythread</title>
+	<meta charset="UTF-8">
+	<title>Filmes Barbie | OnlyThread</title>
+	<link rel="stylesheet" href="src/css/styles.css" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
 </head>
 <body>
-  <h1>Filmes</h1>
+	<div class="container-films">
+		<header>
+			<nav>
+				<h3>Filmes online</h3>
+				<ul>
+					<li>Home</li>
+					<li>Filmes</li>
+					<li>Rede social</li>
+				</ul>
+			</nav>
+			<div class="group-home-info">
+				<div class="home-info">
+					<h1>Filmes variados</h1>
+					<p>Assista em seu notebook ou celular a qualquer hora.</p>
+					<button type="submit" id="viewfilms">Ver filmes</button>
+				</div>
+				<img src="./assets/computer_display.svg" alt="filmes online" />
+			</div>
+			<img id="waves-header" src="assets/wave.svg" alt="waves" />
+		</header>
+		<section>
+			<h2>Filmes</h2>
+			<ul>
+				<li>Filmes 1</li>
+				<li>Filmes 2</li>
+				<li>Filmes 3</li>
+				<li>Filmes 4</li>
+				<li>Filmes 5</li>
+				<li>Filmes 6</li>
+			</ul>
+			<a href="all-films.html"><button>Ver todos</button></a>
+			<img class="circles-right" src="./assets/circles-right.svg" alt="circles-right" />
+			<img class="circles-left" src="./assets/circles-left.svg" alt="circles-left" />
+		</section>
+		<article>
+			<img class="top-waves-article" src="./assets/top-waves-article.svg" alt="top-waves-article" />
+			<h2>Rede Social</h2>
+			<div class="group-social">
+				<span><i id="instagram" class="fab fa-instagram" style="width:95px;height:95px"></i> <a href="">_onlythread</a></span>
+				<div class="social-info">
+					<h1>Siga-me :)</h1>
+					<p>Seguindo, você saberá se têm mais filmes chegando.</p>
+				</div>
+			</div>
+			<img class="bottom-waves-article" src="./assets/bottom-waves-article.svg" alt="bottom-waves-article" />
+		</article>
+		<footer>
+			<p>Site criado por: <a href="https://github.com/RicardoWorf">RicardoWorf</a></p>
+			<p>Dono: <a href="https://instagram.com/onlythread">_onlythread</a></p>
+		</footer>
+	</div>
+
+	<script src="src/js/jquery.js"></script>
+	<script src="src/js/script.js" type="text/javascript"></script>
 </body>
 </html>
