--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 		<header>
 			<nav>
 				<h3>Filmes online</h3>
-				<ul>
+				<ul id="nav-links">
 					<li>Home</li>
 					<li>Filmes</li>
 					<li>Rede social</li>
 				</ul>
+				<div class="burger">
+					<div class="line1"></div>
+					<div class="line2"></div>
+					<div class="line3"></div>
+				</div>
 			</nav>
 			<div class="group-home-info">
 				<div class="home-info">
@@ -33,67 +38,33 @@
 			<div class="films-filter">
 				<h2>Filmes</h2>
 				<div class="filter">
-					<select>
-						<option value="category">Aleatório</option>
+					<select id="category">
+						<option value="random">Aleatório</option>
 						<option value="action">Ação</option>
 						<option value="adventure">Aventura</option>
 						<option value="draw">Desenho</option>
 						<option value="horror">Terror</option>
+						<option value="comedy">Comédia</option>
+						<option value="animation">Animação</option>
+						<option value="teenager">Adolescencia</option>
+						<option value="family">Família</option>
+						<option value="romance">Romance</option>
+						<option value="drama">drama</option>
+						<option value="musical">Musical</option>
+						<option value="science-fiction">Ficção Científica</option>
 					</select>
-					<button id="filtering"><i class="fas fa-chevron-right" style="color:white"></i></button>
+					<button id="filtering">
+						<i class="fas fa-chevron-right" style="color:white"></i>
+					</button>
 				</div>	
 			</div>
 			
-			<ul class="list-films">
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button onclick="testViewFilm()">Assistir</button>
-				</li>
-
-				<li>
-					<p><span>Nome:</span>Shrek 2</p>
-					<p><span>Categoria:</span>Animação</p>
-					<button>Assistir</button>
-				</li>
+			<ul id="list-films">
 			</ul>
+
 			<img class="circles-right" src="./assets/circles-right.svg" alt="circles-right" />
 			<img class="circles-left" src="./assets/circles-left.svg" alt="circles-left" />
+
 		</section>
 		<article>
 			<img class="top-waves-article" src="./assets/top-waves-article.svg" alt="top-waves-article" />
@@ -101,7 +72,7 @@
 			<div class="group-social">
 				<span>
 					<i id="instagram" class="fab fa-instagram" style="width:95px;height:95px"></i>
-					<a href="">_onlythread</a>
+					<a href="https://instagram.com/_onlythread">_onlythread</a>
 				</span>
 				<div class="social-info">
 					<h1>Siga-me :)</h1>
@@ -112,11 +83,17 @@
 		</article>
 		<footer>
 			<p>Site criado por: <a href="https://github.com/RicardoWorf">RicardoWorf</a></p>
-			<p>Dono: <a href="https://instagram.com/onlythread">_onlythread</a></p>
+			<p>Dono: <a href="https://instagram.com/_onlythread">_onlythread</a></p>
 		</footer>
+		<div id="view-film-full-screen">
+		</div>
 	</div>
 
 	<script src="src/js/jquery.js"></script>
 	<script src="src/js/script.js" type="text/javascript"></script>
+	<script src="src/js/films.js" type="text/javascript"></script>
+	<script src="src/js/randomFilms.js" type="text/javascript"></script>
+	<script src="src/js/parseHttpForIframe.js" type="text/javascript"></script>
+	<script src="src/js/loadFilms.js" type="text/javascript"></script>
 </body>
 </html>
