--- a/index.html
+++ b/index.html
@@ -42,18 +42,17 @@
 					<button id="filtering"><i class="fas fa-filter" style="color:white"></i></button>
 					<select id="category">
 						<option value="random">Aleatório</option>
-						<option value="action">Ação</option>
-						<option value="adventure">Aventura</option>
-						<option value="draw">Desenho</option>
-						<option value="horror">Terror</option>
-						<option value="comedy">Comédia</option>
-						<option value="animation">Animação</option>
-						<option value="teenager">Adolescencia</option>
-						<option value="family">Família</option>
-						<option value="romance">Romance</option>
-						<option value="drama">Drama</option>
-						<option value="musical">Musical</option>
-						<option value="science-fiction">Ficção Científica</option>
+						<option value="Ação">Ação</option>
+						<option value="Aventura">Aventura</option>
+						<option value="Terror">Terror</option>
+						<option value="Comédia">Comédia</option>
+						<option value="Animação">Animação</option>
+						<option value="Adolescencia">Adolescencia</option>
+						<option value="Família">Família</option>
+						<option value="Romance">Romance</option>
+						<option value="Drama">Drama</option>
+						<option value="Musical">Musical</option>
+						<option value="Ficção Científica">Ficção Científica</option>
 					</select>
 				</div>	
 				<div class="searchFilms">
