--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Filmes Barbie | OnlyThread</title>
+	<title>Filmes Online | OnlyThread</title>
 	<link rel="stylesheet" href="src/css/styles.css" />
 	<link rel="stylesheet" href="src/css/responsive-design.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
