Add Anuncios para tentarmos ganhar algo

--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
 			</div>
 			<img id="waves-header" src="assets/wave.svg" alt="waves" />
 		</header>
-		<section >
+		<section>
 			<h2>Filmes</h2>
 			<div class="films-filter">
-				
 				<div class="filter">
 					<button id="filtering"><i class="fas fa-filter" style="color:white"></i></button>
 					<select id="category">
@@ -61,11 +60,14 @@
 						<button type="submit"><i class="fas fa-search" style="color:white"></i></button>
 					</form>
 				</div>
+				<script data-ad-client="ca-pub-7976683115676836" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+				</script>
 			</div>
 			
 			<ul id="list-films">
 			</ul>
-
+			<script data-ad-client="ca-pub-7976683115676836" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+			</script>
 			<img class="circles-right" src="./assets/circles-right.svg" alt="circles-right" />
 			<img class="circles-left" src="./assets/circles-left.svg" alt="circles-left" />
 
