Insert Google Analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<link rel="stylesheet" href="src/css/styles.css" />
 	<link rel="stylesheet" href="src/css/responsive-design.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-169216397-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-169216397-1');
+	</script>
+
 </head>
 <body>
 	<div class="container-films" id="home">
